--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,1 +1,46 @@
 /* Will be compiled down to a single stylesheet with your sass files */
+
+@mixin gradient($start: #fafafa, $end: #eaeaea){
+  background: $start;
+  background: -moz-linear-gradient($start, $end);
+  background: -webkit-linear-gradient($start, $end);
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='$start', endColorstr='$end')";
+  background: linear-gradient($start, $end);
+}
+
+$farset-purple: #353895;
+$farset-green: 9acc3c;
+
+* {
+  -wekbit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+html, body {
+  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 18px;
+  margin: 0;
+  padding: 0;
+  color: darken($farset-purple, 30%);
+}
+
+header, section, footer {
+  width: 100%;
+  float: left;
+  clear: both;
+  padding: 0 15px;
+}
+
+h1, h2, h3 {
+  font-weight: normal;
+}
+
+header {
+  background: $farset-purple;
+  color: lighten($farset-purple, 40%);
+  h1 {
+    margin: .25em 0;
+    font-weight: 300;
+  }
+}
